# automata-safa-example

./: .gitignore  CMakeLists.txt  DockerfileCpp  DockerfileCppSimple  DockerfilePython  DockerfilePythonSimple  README.md  main.c++  main.py
example/: 148  5
